--- a/index.html
+++ b/index.html
@@ -4,9 +4,125 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML CSS S3 Ejercicio 1</title>
+
+    <!--LOAD CSS-->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!--START-HEADER-->
+    <header class="header">
+        <div class="header__container">
+            <nav class="header__nav">
+                <ul class="nav__ul">
+                    <li class="nav__li"><a href="#" class="nav__a">Item 1</a></li>
+                    <li class="nav__li"><a href="#" class="nav__a">Item 1</a></li>
+                    <li class="nav__li"><a href="#" class="nav__a">Item 1</a></li>
+                    <li class="nav__li"><a href="#" class="nav__a">Item 1</a></li>
+                    <li class="nav__li"><a href="#" class="nav__a">Item 1</a></li>
+                    <li class="nav__li"><a href="#" class="nav__a">Item 1</a></li>
+                </ul>
+            </nav>
+            <a href="#" class="header__logo"><h1 class="logo__h1">MI_TIENDA</h1></a>
+            <form action="" class="header__form"><input type="text" class="header__search-bar"></form>
+        </div>
+    </header>
+    <!--END-HEADER-->
+    <!--START-MAIN-->
+    <main class="main">
+        <div class="main__container">
+            <article class="main__article">
+                <a href="#" class="article__a"><img src="img/item1.jpg" alt="" class="article__img"></a>
+                <h4 class="article__h4">Item 1</h4>
+                <div class="article__info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            </article>
+            <article class="main__article">
+                <a href="#" class="article__a"><img src="img/item1.jpg" alt="" class="article__img"></a>
+                <h4 class="article__h4">Item 2</h4>
+                <div class="article__info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            </article>
+            <article class="main__article">
+                <a href="#" class="article__a"><img src="img/item1.jpg" alt="" class="article__img"></a>
+                <h4 class="article__h4">Item 3</h4>
+                <div class="article__info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            </article>
+            <article class="main__article">
+                <a href="#" class="article__a"><img src="img/item1.jpg" alt="" class="article__img"></a>
+                <h4 class="article__h4">Item 4</h4>
+                <div class="article__info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            </article>
+            <article class="main__article">
+                <a href="#" class="article__a"><img src="img/item1.jpg" alt="" class="article__img"></a>
+                <h4 class="article__h4">Item 5</h4>
+                <div class="article__info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            </article>
+            <article class="main__article">
+                <a href="#" class="article__a"><img src="img/item1.jpg" alt="" class="article__img"></a>
+                <h4 class="article__h4">Item 6</h4>
+                <div class="article__info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            </article>
+            <article class="main__article">
+                <a href="#" class="article__a"><img src="img/item1.jpg" alt="" class="article__img"></a>
+                <h4 class="article__h4">Item 7</h4>
+                <div class="article__info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            </article>
+            <article class="main__article">
+                <a href="#" class="article__a"><img src="img/item1.jpg" alt="" class="article__img"></a>
+                <h4 class="article__h4">Item 8</h4>
+                <div class="article__info">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            </article>
+        </div>
+    </main>
+    <!--END-MAIN-->
+    <!--START-FOOTER-->
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__menu">
+                <h4>Menu 1</h4>
+                <ul class="footer__ul">
+                    <li class="footer__li">Item 1</li>
+                    <li class="footer__li">Item 2</li>
+                    <li class="footer__li">Item 3</li>
+                    <li class="footer__li">Item 4</li>
+                    <li class="footer__li">Item 5</li>
+                    <li class="footer__li">Item 6</li>
+                </ul>
+            </div>
+            <div class="footer__menu">
+                <h4>Menu 1</h4>
+                <ul class="footer__ul">
+                    <li class="footer__li">Item 1</li>
+                    <li class="footer__li">Item 2</li>
+                    <li class="footer__li">Item 3</li>
+                    <li class="footer__li">Item 4</li>
+                    <li class="footer__li">Item 5</li>
+                    <li class="footer__li">Item 6</li>
+                </ul>
+            </div>
+            <div class="footer__menu">
+                <h4>Menu 1</h4>
+                <ul class="footer__ul">
+                    <li class="footer__li">Item 1</li>
+                    <li class="footer__li">Item 2</li>
+                    <li class="footer__li">Item 3</li>
+                    <li class="footer__li">Item 4</li>
+                    <li class="footer__li">Item 5</li>
+                    <li class="footer__li">Item 6</li>
+                </ul>
+            </div>
+            <div class="footer__menu">
+                <h4>Menu 1</h4>
+                <ul class="footer__ul">
+                    <li class="footer__li">Item 1</li>
+                    <li class="footer__li">Item 2</li>
+                    <li class="footer__li">Item 3</li>
+                    <li class="footer__li">Item 4</li>
+                    <li class="footer__li">Item 5</li>
+                    <li class="footer__li">Item 6</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <!--END-FOOTER-->
 </body>
 </html>
